# fleet

./: CNAME  Cargo.toml  LICENSE  Makefile  README.md  all.html  crates.js  fleet.yml  help.html  search-index.js  settings.html  src-files.js  tests.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  docs.yml  tests.yml
cli/: enum.Commands.html  struct.Cli.html
cli/builders/: sidebar-items.js
config/: sidebar-items.js  struct.Cmd.html  struct.Pipeline.html
config/parser/: fn.load_config.html  index.html
core/: index.html
core/id/: fn.short_id.html  index.html
core/manager/: fn.get_watch_ctx.html  index.html
core/state/: fn.get_id_by_name.html  fn.get_name_by_id.html  sidebar-items.js  struct.AppState.html
core/watcher/: index.html  struct.WatchContext.html  struct.WatchContextBuilder.html
core_lib/: all.html  index.html  sidebar-items.js
core_lib/cli/: enum.Commands.html  index.html  sidebar-items.js  struct.Cli.html
core_lib/config/: fn.stdin_is_tty.html  index.html  sidebar-items.js  struct.Cmd.html  struct.ConfChannel.html  struct.Job.html  struct.Notification.html  struct.Pipeline.html  struct.ProjectConfig.html
core_lib/core/: index.html
core_lib/daemon/: index.html  sidebar-items.js
core_lib/exec/: enum.CMDManage.html  enum.OutpuStrategy.html  index.html  sidebar-items.js  struct.PipeRegistry.html
core_lib/git/: index.html
core_lib/log/: index.html  sidebar-items.js
core_lib/notifications/: index.html  sidebar-items.js  struct.DiscordEmbed.html  struct.DiscordField.html  (+2 more)
exec/: index.html
fleet/: all.html  fn.main.html  index.html  sidebar-items.js
fleetd/: all.html  fn.main.html  index.html  sidebar-items.js
git/: index.html
log/: index.html
notifications/: index.html  struct.DiscordField.html
search.index/: 003309985fdd.js  01b943816f58.js  0317b3b487a0.js  0374aacfa23a.js  04194171854b.js  04b845460447.js  06d5a3a0c747.js  074a4c80cb26.js  07859153c507.js  0acab2a1e633.js  0b576d8f0c79.js  0b65325298a8.js  0d8562fa57e7.js  0e30d8595e56.js  0f94789eb3f7.js  149413c6e3b7.js  166ca4979e23.js  198964fca238.js  1a8511b2d776.js  1b14f6974d64.js  1d3de77e62b2.js  1fe2db92d954.js  20265ab4a258.js  21d2f9d82194.js  2545a0b08212.js  26395c745760.js  26a390e4f6c9.js  274ed9996746.js  28082ba0d42e.js  2bcfe20a6635.js  2be10bbd9acf.js  2dc6e872bb36.js  2f37890c4ab4.js  2f510f8b0eb8.js  2f5d63d565f2.js  3118fbc96e2b.js  32f0a40dd854.js  33c82d40f78c.js  34a29e0edc08.js  34b3c7f77f05.js  (+45 more)
src/: app.rs  cli.rs  fleet.rs  fleetd.rs  lib.rs  logging.rs  main.rs  mod.rs
stats/: index.html
tests/: cli_test.rs  config_test.rs  daemon_test.rs  git_test.rs  scheduler_test.rs  utiles_test.rs
(+632 files in other folders)
