[package]
name = "fleet"
version = "1.0.0"
edition = "2024"
authors = ["pepedinho <itahri@student.42.fr>"]
description = "Fleet is a Rust orchestrator for monitoring and automating pipelines"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pepedinho/fleet"
homepage = "https://pepedinho.github.io/fleet/core_lib/"
documentation = "https://pepedinho.github.io/fleet/core_lib/"

[lib]
name = "core_lib"
path = "src/lib.rs"

[[bin]]
name = "fleet"
path = "src/fleet.rs"

[[bin]]
name = "fleetd"
path = "src/fleetd.rs"

[dev-dependencies]
pretty_assertions = "1.3" 

[features]
default = []
force_commit = []
no-tty = []

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono =  { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json"] }
serde_yaml = "0.9"
serde_json = "1.0"
git2 = "0.18"
rand = "0.8"
atty = "0.2"
anyhow = "1.0"
shell-words = "1.1"
async-trait = "0.1"
dirs = "6.0.0"
sysinfo = "0.37.0"
hex = "0.4"
ratatui = "0.28.0"
bollard = "*"
futures-util = "0.3.31"
tempfile = "3.21.0"
